<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single"
        android:id="@+id/page_btns">
        <item
            android:id="@+id/homeIcon"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_button" />
        <item
            android:id="@+id/weightIcon"
            android:icon="@drawable/ic_fitness_center_black_24dp"
            android:title="@string/fitness_button"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/account_cntrl">
        <item
            android:id="@+id/manageUser"
            android:icon="@drawable/ic_user"
            android:title="@string/user_icon"/>

    </group>


</menu>