<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="horizontal"
    tools:context=".AddWorkout">


    <EditText
        android:id="@+id/edit_wName"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/workout"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/edit_sets"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_wName"
        android:layout_alignTop="@+id/edit_reps"
        android:ems="10"
        android:hint="@string/sets"
        android:inputType="textPersonName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_reps"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_wName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:hint="@string/reps"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/edit_sets"
        app:layout_constraintTop_toBottomOf="@+id/edit_wName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_wDate"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/workout_date"
        android:inputType="textPersonName|date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sets"
        app:layout_constraintVertical_bias="0.0" />


</RelativeLayout>